--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-base64": "^1.0.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-razorpay": "^2.0.1",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
